<resources>
    <string name="app_name">Calculator</string>
    <string name="one_numeric">1</string>
    <string name="multiply_symbol">*</string>
    <string name="dif_symbol">-</string>
    <string name="sum_symbol">+</string>
    <string name="equal_symbol">=</string>
    <string name="divide_symbol">/</string>
    <string name="seven_numeric">7</string>
    <string name="eight_numeric">8</string>
    <string name="nine_numeric">9</string>
    <string name="four_numeric">4</string>
    <string name="five_numeric">5</string>
    <string name="six_numeric">6</string>
    <string name="two_numeric">2</string>
    <string name="three_numeric">3</string>
    <string name="dot">.</string>
    <string name="zero_numeric">0</string>
    <string name="delete_symbol">DEL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Calculator</string>
    <string name="finance">Finance</string>
    <string name="percent_symbol">%</string>
    <string name="rad_symbol">RAD</string>
    <string name="fact_symbol">!</string>
    <string name="sin_symbol">sin</string>
    <string name="cos_symbol">cos</string>
    <string name="ln_symbol">ln</string>
    <string name="log_symbol">log</string>
    <string name="tan_symbol">tan</string>
    <string name="bin_symbol">bin</string>
    <string name="hex_symbol">hex</string>
    <string name="dec_symbol">dec</string>
    <string name="parenthesis_open_symbol">(</string>
    <string name="parenthesis_close_symbol">)</string>
    <string name="sqrt_symbol">√</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="error">ERROR</string>
    <string name="statistics">Statistics</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="bank_sabadell">Banc Sabadell</string>
    <string name="last_transactions">Last transactions</string>
    <string name="general_error">An error occurred</string>
    <string name="currency_converter">Currency converter</string>
    <string name="interest_calculator">Interest calculator</string>
    <string name="total_value">Total value</string>
    <string name="rate">Rate</string>
    <string name="years">Years</string>
    <string name="interest">INTEREST: %s</string>
    <string name="final_value">FINAL VALUE: %s</string>
    <string name="elevation_symbol">^</string>
    <string name="app_version_title">App version:</string>
    <string name="contact_title">Contact</string>
    <string name="contact_email">albertbecerrahervas@gmail.com</string>
    <string name="developed_by_title">Developed by:</string>
    <string name="developer_name">Albert Becerra Hervás</string>
    <string name="github">Github</string>
    <string name="github_link">github.com/albertbecervas/Calculator</string>
    <string name="explanation">App developed for the technical test of:</string>
    <string name="transactions_balance">Transactions balance</string>
    <string name="all">All</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="loan">Loan</string>
    <string name="monthly_pay">MONTHLY PAY: %s</string>
</resources>
