<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:showIn="@layout/activity_about">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/tvVersionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/app_version_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvVersionTitle"
            app:layout_constraintStart_toEndOf="@+id/tvVersionTitle"
            app:layout_constraintTop_toTopOf="@+id/tvVersionTitle"
            tools:text="0.1" />

        <TextView
            android:id="@+id/tvContactTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/contact_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVersionTitle" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/contact_email"
            android:textColor="@color/original_blue"
            app:layout_constraintBottom_toBottomOf="@+id/tvContactTitle"
            app:layout_constraintStart_toEndOf="@+id/tvContactTitle"
            app:layout_constraintTop_toTopOf="@+id/tvContactTitle" />

        <TextView
            android:id="@+id/tvDevelopedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/developed_by_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContactTitle" />

        <TextView
            android:id="@+id/tvDevelopedByValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/developer_name"
            app:layout_constraintBottom_toBottomOf="@+id/tvDevelopedTitle"
            app:layout_constraintStart_toEndOf="@+id/tvDevelopedTitle"
            app:layout_constraintTop_toTopOf="@+id/tvDevelopedTitle" />

        <TextView
            android:id="@+id/tvGithubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/github"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDevelopedByValue" />

        <TextView
            android:id="@+id/tvGithubValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/github_link"
            android:textColor="@color/original_blue"
            app:layout_constraintBottom_toBottomOf="@+id/tvGithubTitle"
            app:layout_constraintStart_toEndOf="@+id/tvGithubTitle"
            app:layout_constraintTop_toTopOf="@+id/tvGithubTitle" />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>